Fixed issue with button being cropped in IE11

--- a/src/client/components/CookieNotice/CookieNotice.scss
+++ b/src/client/components/CookieNotice/CookieNotice.scss
@@ -23,5 +23,6 @@
   border-radius: $border-rounded;
   p {
     margin-right: 1rem;
+    flex: 1;
   }
 }
